# FastQTools

./: .clang-format  .dockerignore  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitmessage.txt  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  DEPLOYMENT.md  HELP.md  MIGRATION.md  README.md  conanfile.py
.devcontainer/: README.md  devcontainer.json  devcontainer.simple.json  setup-sshd.sh  start-sshd.sh
.devcontainer/scripts/: container-setup.sh  host-prepare.sh
.github/workflows/: benchmark.yml  ci.yml  quality.yml  release.yml  valgrind.yml
.kiro/steering/: product.md  structure.md  tech.md
.windsurf/: rules.md
.windsurf/workflows/: address-pr-comments.md  asan-check.md  benchmark-io.md  code-formatting.md  code-style-review.md  coverage.md  release-package.md  run-cli-e2e.md  run-tests-and-fix.md  static-analysis.md  tsan-check.md  ubsan-check.md  valgrind-cachegrind.md  valgrind-memcheck.md
_output/diffs/: diff_workspace_uncommitted_20260107-224900.diff
benchmark_results/: .gitkeep
cascade/: Refactor Project Structure and Docs.md  third_party_analysis.md.resolved
changelog/: 2025-10-23-dependency-cleanup.md  2025-12-22-devcontainer-fix.md  2025-12-22-docs-file-naming-overhaul.md  2025-12-22-scripts-refactor.md  2025-12-24-add-workflows.md  2025-12-24-clang19-end-to-end-alignment.md  2025-12-24-config-cleanup.md  2025-12-24-devcontainer-mounts-gitattributes-commit-template.md  2025-12-24-devcontainer-vscode.md  2025-12-24-doxygen-file-tag-consistency.md  2025-12-24-i-command-file-tag-consistency.md  2025-12-24-metadata-and-packaging-recipes-cleanup.md  2025-12-24-style-unify-workflow-and-formatting.md  2025-12-24-windsurf-workflow.md  2025-12-25-batch3-snakecase-paths-tests-examples-tools.md  2025-12-25-changelog-legacy-fastq-reference.md  2025-12-25-cli-command-interface-rename.md  2025-12-25-cli-filter-command-naming-refactor.md  2025-12-25-core-header-include-cleanup.md  2025-12-25-docs-and-scripts-snakecase-rename.md  2025-12-25-e2e-script-permission-fix.md  2025-12-25-error-module-naming-refactor.md  2025-12-25-fastq-batch-member-naming-refactor.md  2025-12-25-fastq-module-member-naming-refactor.md  2025-12-25-fq-core-include-boundary.md  2025-12-25-io-module-member-naming-refactor.md  2025-12-25-io-pimpl-rename.md  2025-12-25-mutators-naming-refactor.md  2025-12-25-naming-convention-mongodb-style.md  2025-12-25-options-fields-camelcase.md  2025-12-25-predicates-naming-refactor.md  2025-12-25-processing-interface-alias-cleanup.md  2025-12-25-processing-pipeline-naming-refactor.md  2025-12-25-processing-pipeline-public-api-rename.md  2025-12-25-remove-dead-src-modules-pipeline.md  2025-12-25-remove-i_read_processor-aggregation.md  2025-12-25-remove-legacy-io-fastq-modules.md  2025-12-25-scripts-executable-permissions.md  2025-12-25-statistics-module-naming-refactor.md  2025-12-25-statistics-public-api-rename.md  (+41 more)
cmake/: FastQToolsConfig.cmake.in
cmake/modules/: fq_coverage.cmake  fq_fuzzing.cmake  fq_sanitizers.cmake
config/: README.md
config/conan/: profile-clang  profile-gcc
config/cppcheck/: cppcheck.cfg  suppressions.txt
config/dependencies/: conanfile.py
config/deployment/: Dockerfile
config/iwyu/: mappings.imp
config/sanitizers/: README.md  asan.options  msan.options  tsan.options  ubsan.options
config/valgrind/: suppressions.supp
docker/: .env  .env.example  Dockerfile  Dockerfile.dev  Dockerfile.prod  docker-compose.yml  start_devcontainer.sh
docs/: README.md  git_commit_guide.md  installation.md  optimization-design.md  optimization-implementation.md  optimization-requirements.md
docs/analysis/: implementation-proposals.md  optimization-roadmap.md  project-comprehensive-analysis.md  thinking-process.md
docs/benchmark-reports/: latest.json  latest.md
docs/dev/: architecture.md  benchmark-guide.md  build.md  coding-standards.md  design.md  devcontainer-guidelines.md  git-guidelines.md  implementation-progress.md  quality-tools.md  requirements.md  windsurf-cursor-devcontainer-ssh.md
docs/optimization/: critical-analysis.md  design.md  implementation.md  requirements.md
docs/performance/: benchmark-report.md
scripts/: .deprecated-notice  ARCHITECTURE.md  QUICKSTART.md  README.md  README.new.md  benchmark  benchmark_io.sh  build  build-dev.sh  devcontainer_setup.sh  docker_deploy.sh  gcov_wrapper.sh  generate-diff.sh  install-deps  install_deps.sh  install_runtime.sh  lint  lint.sh  test  test.sh
src/: CMakeLists.txt
src/benchmark/: data_collector.cpp  result_storage.cpp
src/cli/: CMakeLists.txt  main.cpp
src/cli/commands/: command_interface.h  filter_command.cpp  filter_command.h  stat_command.cpp  stat_command.h
src/common/: CMakeLists.txt  common.cpp
src/config/: CMakeLists.txt  config.cpp
src/core/: CMakeLists.txt
src/error/: CMakeLists.txt  error.cpp
src/io/: CMakeLists.txt  fastq_reader.cpp  fastq_writer.cpp
src/processing/: CMakeLists.txt  factory.cpp  processing_pipeline.cpp  processing_pipeline.h  processing_statistics.cpp
src/processing/mutators/: quality_trimmer.cpp
src/processing/predicates/: min_quality_predicate.cpp
src/statistics/: CMakeLists.txt  fq_statistic.cpp  fq_statistic.h  fq_statistic_worker.cpp  fq_statistic_worker.h
tests/: CMakeLists.txt  README.md
tests/cmake_package_consumer/: CMakeLists.txt  main.cpp
tests/integration/: CMakeLists.txt  test_pipeline_integration.cpp
tests/unit/: CMakeLists.txt
tests/unit/common/: test_common.cpp  test_timer.cpp
tests/unit/config/: test_config_parsing.cpp  test_configuration.cpp
tests/unit/error/: test_error_handler.cpp  test_exceptions.cpp
tests/unit/io/: test_fastq_reader.cpp  test_writer.cpp
tests/unit/memory/: test_object_pool.cpp
tests/unit/processing/: test_pipeline_smoke.cpp
tests/unit/statistics/: test_statistics.cpp
tools/benchmark/: CMakeLists.txt  badge_generator.py  fastq_io_benchmark.cpp  filter_benchmark.cpp  gen_benchmark_data.py  object_pool_benchmark.cpp  pipeline_benchmark.cpp  regression_detector.py  report_generator.py  run_baseline.sh  stat_benchmark.cpp
(+111 files in other folders)
